--- a/src/cats_project/LogPanel.form
+++ b/src/cats_project/LogPanel.form
@@ -43,6 +43,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Settings"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jDownloadStreams">
       <Properties>
