Improvised GUI - Dynamic Machine Adding/Removal Server Client connect through flv

--- a/src/cats_project/MachinePanel.form
+++ b/src/cats_project/MachinePanel.form
@@ -24,8 +24,10 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jMachineName" min="-2" pref="160" max="-2" attributes="0"/>
-              <EmptySpace pref="215" max="32767" attributes="0"/>
-              <Component id="jLogButton" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="122" max="32767" attributes="0"/>
+              <Component id="removeButton" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Component id="configureButton" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -35,8 +37,9 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLogButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="configureButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jMachineName" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="removeButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
@@ -44,18 +47,26 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JButton" name="jLogButton">
+    <Component class="javax.swing.JButton" name="configureButton">
       <Properties>
-        <Property name="text" type="java.lang.String" value="See Logs"/>
+        <Property name="text" type="java.lang.String" value="Configure"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jLogButtonActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="configureButtonActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jMachineName">
       <Properties>
         <Property name="text" type="java.lang.String" value="Machine"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="removeButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Remove"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="removeButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
